@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Dave Mueller
 copyright_year   = 2015
 
-version = 0.09
+version = 0.10
 
 [GatherDir]
 [GithubMeta]
